2009-03-28  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/epdf_evas_test.c:
	* src/lib/Epdf.h:
	* src/lib/epdf_document.cpp:
	* src/lib/epdf_document.h:
	* src/lib/epdf_fontinfo.cpp:
	* src/lib/epdf_index.cpp:
	* src/lib/epdf_index.h:
	* src/lib/epdf_page.cpp:
	* src/lib/epdf_page.h:
	* src/lib/epdf_page_transition.cpp:
	* src/lib/epdf_postscript.cpp:
	* src/lib/epdf_private.h:
	* src/lib/esmart_pdf.c:
	* src/lib/esmart_pdf.h:
	move to eina data types and formatting

	* src/lib/epdf_main.cpp:
	* src/lib/epdf_main.h:
	add function to initialize and shut down
	epdf as eina_list must be initialize / shut down

2009-03-28  Vincent Torri  <doursse at users dot sf dot net>

	* Doxyfile:
	remove Doxyfile from the top level directory

	* src/bin/epdf_evas_test.c:
	formatting

	* src/lib/epdf_page.cpp:
	set correctly the evas object data after having
	updated it

	* src/lib/ewl_pdf.c:
	* src/plugins/ewl/ewl_pdf.c:
	fix ewl code wrt the new api

2009-01-16  Vincent Torri  <doursse at users dot sf dot net>

	reviewed by: Vincent Torri
	patch by: Alexander Kerner <lunohod@openinkpot.org>

	* epdf.pc.in:
	typo

2009-01-13  Vincent Torri  <doursse at users dot sf dot net>

	* COPYING.LESSER:
	* LICENCE:
	the LGPL licence is used for the source files that are in
	src/lib and src/plugins and the GPL licence is used for
	the source files that are in src/bin

2009-01-13  Vincent Torri  <doursse at users dot sf dot net>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* epdf-etk.pc.in:
	* epdf-ewl.pc.in:
	* m4/ac_attribute.m4:
	* m4/efl_doxygen.m4:
	* src/bin/Makefile.am:
	* src/bin/epdf_ewl_test.c:
	* src/lib/Makefile.am:
	separate the ewl and etk widgets from epdf.
	use epdf-ewl. pc and epf-etk.pc files to get
	the correct flags to pass to gcc.

	* src/plugins/epsilon/Makefile.am:
	* src/plugins/ewl/Makefile.am:
	add always -no-undefined.

	* doc/Doxyfile:
	* doc/Makefile.am:
	* doc/e.css:
	* doc/foot.html:
	* doc/head.html:
	* doc/img/_.gif:
	* doc/img/b.png: